--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ai2018lab4</title>
+  <title>Data Marketplace</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="src/favicon.ico">
